# bugzcxx

./: AUTHORS  INSTALL  README.md  RELEASE_NOTES  autogen.sh  configure.ac
api/bugzc/: Doxyfile.in
api/bugzcxx/: Doxyfile.in
branches/0.0.1/: configure.ac
branches/0.0.1/api/bugzcxx/: Doxyfile.in
branches/0.0.1/bugzc/: bugzc_bugzilla.h
branches/0.0.1/examples/bugzc/: get_legal_field_values  get_legal_field_values.c
branches/0.0.2/: ChangeLog  INSTALL  configure
branches/0.0.2/api/bugzc/: Makefile.in
branches/0.0.2/api/bugzcxx/: Makefile.in
branches/0.0.2/bugzc/: bugz_errcodes.c  bugz_errcodes.h  bugzc.c  bugzc_bug.h  bugzc_user.h  xmlrpc_helper.h
branches/0.0.2/examples/bugzc/: get_legal_field_values  submit_bug.c  testlogin.c
branches/0.0.3/: INSTALL  Makefile.am  configure
branches/0.0.3/api/: Makefile.am
branches/0.0.3/bugzc/: bugzc.pc.in  bugzc_bug.c  bugzc_bug.h  xmlrpc_helper.h
branches/0.0.3/examples/bugzc/: bugz_create_user.c  get_legal_field_values  get_legal_field_values.c  offer_account_by_email.c  testlogin.c
branches/0.0.4/: RELEASE_NOTES  config.h.in  configure.ac
branches/0.0.4/bugzc/: Makefile.in  bugz_errcodes.c  bugz_features.h.in  bugzc.h  bugzc_bug.c  bugzc_list.h  bugzc_product.c  xmlrpc_helper.c
branches/0.0.4/examples/bugzc/: get_bugs.c  get_legal_field_values  get_products.c  gettimezone.c  submit_bug.c  testlogin.c
bugzc/: Makefile.am  bugz_errcodes.c  bugz_errcodes.h  bugzc.c  bugzc.h  bugzc.pc.in  bugzc_bug.c  bugzc_bug.h  bugzc_bugzilla.c  bugzc_list.c  bugzc_list.h  bugzc_product.c  bugzc_user.c  bugzc_version.h.in  xmlrpc_helper.c  xmlrpc_helper.h
bugzcxx/: Makefile.am  bugzcxx.cpp  bugzcxx.h  bugzcxx.pc.in
examples/: README
examples/bugzc/: Makefile.am  bugz_create_user.c  get_bugs.c  get_legal_field_values.c  get_products.c  getversion.c  submit_bug.c
examples/bugzcxx/: Makefile.am  accountoffer.cpp  utils.cpp
trunk/: .Makefile.am.swp  .configure.ac.swp  .cproject  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  RELEASE_NOTES  configure  configure.ac
trunk/api/: Doxyfile.in  Makefile.in
trunk/api/bugzc/: Doxyfile.in
trunk/api/bugzcxx/: Doxyfile.in
trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/bugzc/: Makefile.am  Makefile.in  bugz_errcodes.c  bugz_errcodes.h  bugzc.c  bugzc.h  bugzc.pc.in  bugzc_bug.c  bugzc_bug.h  bugzc_bugzilla.c  bugzc_bugzilla.h  bugzc_list.c  bugzc_list.h  bugzc_product.c  bugzc_product.h  bugzc_user.c  bugzc_user.h  bugzc_version.h.in  xmlrpc_helper.c  xmlrpc_helper.h
trunk/bugzc/.deps/: bugz_errcodes.Plo  bugzc.Plo  bugzc_bug.Plo  bugzc_bugzilla.Plo  bugzc_list.Plo  bugzc_product.Plo  bugzc_user.Plo  xmlrpc_helper.Plo
trunk/bugzc/.libs/: libbugzc-0.1.0.so.1  libbugzc-0.1.0.so.1.0.0  libbugzc.la  libbugzc.lai
trunk/bugzcxx/: BugInfo.cpp  BugInfo.h  Exception.cpp  Exception.h  Makefile.am  bugzcxx.cpp  bugzcxx.h
trunk/bugzcxx/.deps/: Exception.Plo  bugzcxx.Plo
trunk/bugzcxx/.libs/: libbugzcxx-0.1.0.so.1  libbugzcxx-0.1.0.so.1.0.0  libbugzcxx.la  libbugzcxx.lai
trunk/examples/: Makefile.am  README
trunk/examples/bugzc/: Makefile.am  bugz_create_user.c  get_bugs.c  get_legal_field_values  get_legal_field_values.c  get_products.c  gettimezone.c  getversion.c  offer_account_by_email.c  submit_bug.c  testlogin.c  utils.c  utils.h
trunk/examples/bugzc/.deps/: bugz_create_user.Po  get_bugs.Po  get_legal_field_values.Po  get_products.Po  gettimezone.Po  getversion.Po  offer_account_by_email.Po  submit_bug.Po  testlogin.Po
trunk/examples/bugzc/.libs/: bugz_create_user  get_bugs  get_legal_field_values  get_products  gettimezone  getversion  lt-get_bugs  offer_account_by_email  submit_bug  testlogin
trunk/examples/bugzcxx/: Makefile.am  accountoffer  accountoffer.cpp  getbuginfo.cpp  testlogin.cpp  utils.cpp  utils.h
trunk/examples/bugzcxx/.deps/: accountoffer.Po  testlogin.Po
trunk/examples/bugzcxx/.libs/: accountoffer  testlogin
trunk/src/: Makefile.in
trunk/src++/: Makefile.in
