dnl  Bugzilla C/C++ XML-RPC proxy
dnl 
dnl  Copyright (C) Juan V. Guerrero 2007
dnl 
dnl  Juan V. Guerrero <mindstorm2600@users.sourceforge.net>
dnl 
dnl  This program is free software, distributed under the terms of
dnl  the GNU General Public License Version 2. See the LICENSE file
dnl  at the top of the source tree.

SUBDIRS = bugz $(BUILD_CXX_DIR) $(API_DOCS_DIR)
